fix: message box wrap

--- a/template/css/chat_page_css.css
+++ b/template/css/chat_page_css.css
@@ -223,3 +223,19 @@ display: block;
 .image-cover{
   object-fit: cover;
 }
+
+.message-div{
+  display: block;
+  width: 100%;
+  min-height: calc(2.25rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  box-shadow: inset 0 0 0 transparent;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
